# cleanmandate

./: .gitignore  Cargo.toml  README.md
crates/cm-chp/: Cargo.toml
crates/cm-chp/src/: lib.rs
crates/cm-cleanverse/: Cargo.toml
crates/cm-cleanverse/src/: client.rs  lib.rs  types.rs
crates/cm-cli/: Cargo.toml
crates/cm-cli/src/: main.rs
crates/cm-core/: Cargo.toml
crates/cm-core/src/: audit.rs  lib.rs  mandate.rs
crates/cm-executor/: Cargo.toml
crates/cm-executor/src/: lib.rs
crates/cm-policy/: Cargo.toml
crates/cm-policy/src/: lib.rs
docs/: CLEANVERSE_INTEGRATION.md  DEMO.md
examples/mandates/: vendor-payment.json
policies/: mandate.yaml
