[package]
name = "cm-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CleanMandate CLI — verified agent payment mandates"

[[bin]]
name = "cleanmandate"
path = "src/main.rs"

[dependencies]
cm-chp = { workspace = true }
cm-cleanverse = { workspace = true }
cm-core = { workspace = true }
cm-executor = { workspace = true }
cm-policy = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
